# MailchimpSimple

./: LICENSE  Logger.hs  MailchimpSimple.cabal  MailchimpSimple.hs  README.md  Types.hs  activity.json  list.json  mailchimp_simple.cabal  members.json  subscribe.json  web.config
MailchimpSimple/: Logger.hs  Types.hs
Sample Input/: activity.json  members.json  subscribe.json
sample_data/: campaigns.csv  members.csv
src/: MailchimpSimple.hs
src/Utils/: Logger.hs  Types.hs
