Name:		    MailchimpSimple
Version:	    1.0
Cabal-Version:  >= 1.2
License:	    BSD3
License-File:	LICENSE
Author:		    Dananji Liyanage
Homepage:	    https://github.com/Dananji/MailchimpSimple
Synopsis:	    A framework to interact with Mailchimp JSON API
Category:       Web
Build-Type:     Simple

Library
  Build-Depends:	 base                   >= 2 && <= 5
                   , http-conduit           >= 2.1
                   , http-types             >= 0.3
                   , transformers           >= 0.2
                   , aeson                  >= 0.6
                   , ConfigFile             >= 1.0
                   , MissingH               >= 1.0 
                   , mtl                    >= 2.0 && <= 3.0
                   , time                   >= 1.4
                   , filepath               >= 1.2 && <= 2.0
  Exposed-modules:
    MailchimpSimple.Types, MailchimpSimple.Logger
  Extensions:	OverloadedStrings,
                DeriveGeneric
  