Name:		    MailchimpSimple
Version:	    1.0
Cabal-Version:  >= 1.2
License:	    BSD3
Author:		    Dananji Liyanage
Homepage:	    https://github.com/Dananji/MailchimpSimple
Synopsis:	    A framework to interact with Mailchimp JSON API
Category:       Web
Build-Type:     Simple

Library
  Build-Depends:	 base                   >= 2 && < 5
                   , lens                   >= 2.0 && < 4.0
                   , http-conduit           >= 2.1
                   , http-types             >= 0.3
                   , transformers           >= 0.2
                   , aeson                  >= 0.6
                   , aeson-lens             >= 0.1
                   , ConfigFile             >= 1.0
                   , MissingH               >= 1.0 
                   , mtl                    >= 2.0 && < 3.0
                   , time                   >= 1.4
                   , filepath               >= 1.2 && < 2.0
                   , directory              >= 0.1 && < 2.0 
                   , text                   >= 0.1
                   , vector                 >= 0.8 && < 1.0
  Exposed-modules:
    MailchimpSimple.Types, MailchimpSimple.Logger
  Extensions:	OverloadedStrings,
                DeriveGeneric
  